plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version "7.1.2"
}

shadowJar {
    from sourceSets.main.resources

    archiveBaseName.set("btrl-master")
    archiveVersion.set("v"+project.version as String)
    archiveClassifier.set("")
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}


group = project.group
version = project.version

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'com.formdev:flatlaf:3.2'

    implementation 'com.google.code.gson:gson:2.11.0'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'com.cylorun.TourneyMaster'
        attributes 'Implementation-Version': project.version
    }
}